--- a/01_Intro_a_la_web/1.4.1_responsive_desing/style.css
+++ b/01_Intro_a_la_web/1.4.1_responsive_desing/style.css
@@ -25,6 +25,10 @@ h1 {
     display:flex
 }
 
+.main_personal{
+    background-color: #ff86ef;
+}
+
 .hijo {
     background-color: #D9D9D9;  
     height: 80vh;
@@ -32,12 +36,47 @@ h1 {
 }
 
 .uno {
-    flex-grow: 2;
+    position: relative;
 }
 
 .dos {
     flex-grow: 1;
 }
+
+.uno_personal{
+    background-color: #ad3255;
+}
+
+.contenedor_imagen{
+    margin: 10px;
+    height: 300px;
+    width: 200px;
+}
+
+#imagen{
+    height: 30vw;
+    border-style:solid;
+    border-width: 5px;
+    position: absolute;
+}
+
+.contenedor_imagen:hover > #imagen{
+    filter: blur(2px);
+}
+
+.contenedor_imagen:hover > #boton_raton{
+    display: block;
+   
+}
+    
+
+#boton_raton{
+    position: relative;
+    top: 200px;
+    left: 50px;
+    display: none;
+}
+
 
 @media screen and (max-width: 1024px){ 
     .main{
